# classic-rag

./: .gitignore  LEARNING_GUIDE.md  README.md  main.py  pyproject.toml  verify_rag.py
chroma_data/: chroma.sqlite3
docs/: api.md  architecture.md  development.md
src/: config.py
src/adapters/: chroma_adapter.py  document_processor_adapter.py  openai_adapter.py
src/api/: dependencies.py  errors.py  main.py  middleware.py
src/api/static/: app.js  index.html  style.css
src/core/: domain.py  exceptions.py  rag_service.py
src/ports/: document_processor.py  llm.py  storage.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_rag_service.py
